--- a/accounts/templates/accounts/account_change/password_change_form.html
+++ b/accounts/templates/accounts/account_change/password_change_form.html
@@ -1,7 +1,7 @@
 {% extends 'accounts/account_change/base.html' %}
 {% block main %}
 <div class="container">
-    <div class="heading">Change Your Password</div>
+    <div class="heading">CHANGE YOUR PASSWORD</div>
     <form method="post" class="change-form">
         <div>
             <p>Please enter your old password, for security’s sake, and then enter your new password twice so we can
@@ -45,27 +45,38 @@
 </script>
 <style>
     .container {
-        background-color: #EEEEEE;
-        color: #161A1D;
+        background-color: #fff;
+        width: 60vw;
         border-radius: 5px;
-        width: 40vw;
-        margin-left: 30vw;
         padding: 2vh 2vw;
-        margin-top: 10vh;
+        margin: auto;
+        margin-top: 4vh;
+        color: #424242;
+    }
+
+    .form-row {
+        margin-bottom: 2vh;
     }
 
     .submit-row .mdl-button {
-        color: #EEEEEE !important;
-        background-color: #161A1D !important;
-        margin-top: 2vh;
-        margin-bottom: 2vh;
-        text-align: center;
         width: 100%;
+        background-color: #0471ff !important;
+        color: #fff !important;
+        border-radius: 15px;
+        font-size: 2vh;
+        line-height: 2vh;
+        font-family: 'Montserrat', sans-serif !important;
+        height: 5vh;
+        margin-top: 1.2vh;
     }
     .heading {
-        font-size: 2em;
-        text-align: center;
-        margin-bottom: 3vh;
+        font-size: 4vh;
+        font-weight: 300;
+        padding-top: 2vh;
+        color: #150e41;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: bold;
+        margin-bottom: 4vh;
     }
 </style>
 {% endblock %}
