--- a/brand/templates/brand/campaign.html
+++ b/brand/templates/brand/campaign.html
@@ -261,6 +261,7 @@
     {% endif %}
 </div>
 <script>
+    $('main').css('background-color', '#fff');
     $('.campaigns-top-nav').addClass('is-active');
     $('.post-section').each(function(index) {
         $.ajax({
@@ -278,7 +279,6 @@
         width: 65vw;
         margin: auto;
         background-color: #fff;
-        margin-top: 5vh;
         border-radius: 5px;
         padding: 2vh 2vw;
     }
