--- a/accounts/templates/accounts/registration_complete.html
+++ b/accounts/templates/accounts/registration_complete.html
@@ -16,8 +16,9 @@
         padding: 2vh 2vw;
         border-radius: 30px;
         margin-top: 10vh;
-        font-size: 4vh;
-        line-height: 4vh;
+        font-size: 3vh;
+        line-height: 3vh;
+        font-family: 'Montserrat', sans-serif;
     }
 
     .container i {
