--- a/accounts/templates/noauth/base.html
+++ b/accounts/templates/noauth/base.html
@@ -13,7 +13,7 @@
 
 <body>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Montserrat:wght@500&display=swap');
 
         * {
             font-family: 'Quicksand', sans-serif;
