--- a/brand/templates/brand/add_location.html
+++ b/brand/templates/brand/add_location.html
@@ -1,7 +1,7 @@
 {% extends 'brand/base.html' %}
 {% block main %}
 <div class="container">
-    <div class="heading">Add Store Location</div>
+    <div class="heading">ADD STORE LOCATION</div>
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
@@ -26,8 +26,8 @@
     async defer></script>
 <style>
     .container {
-        background-color: #eeeeee;
-        width: 40vw;
+        background-color: #fff;
+        width: 60vw;
         margin: auto;
         margin-top: 10vh;
         border-radius: 5px;
@@ -35,15 +35,31 @@
     }
 
     .heading {
-        font-size: 2em;
-        margin-bottom: 3vh;
-        text-align: center;
+        font-size: 4vh;
+        font-weight: 300;
+        padding-top: 2vh;
+        color: #150e41;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: bold;
+        margin-bottom: 4vh;
     }
 
     input[type="submit"] {
         width: 100%;
-        background-color: #161A1D !important;
-        color: #EEEEEE !important;
+        background-color: #0471ff !important;
+        color: #fff !important;
+        border-radius: 15px;
+        font-size: 2vh;
+        line-height: 2vh;
+        font-family: 'Montserrat', sans-serif !important;
+        height: 5vh;
+        margin-top: 1.2vh;
+    }
+
+    label {
+        font-family: 'Montserrat', sans-serif;
+        color: #515151;
+        font-size: 2.5vh;
     }
 </style>
 {% endblock %}
